All possibilities covered.